Add tests for AdminRestController.