@@ -6,13 +6,14 @@ import ru.kosmos.restaurantratingsystem.model.Roles;
 import ru.kosmos.restaurantratingsystem.model.Users;
 import ru.kosmos.restaurantratingsystem.web.json.JsonUtil;
 
+import java.util.Date;
 import java.util.Set;
 
 import static ru.kosmos.restaurantratingsystem.model.AbstractBaseEntity.START_SEQ;
 
 public class UsersTestData {
 
-    public static final MatcherFactory.Matcher<Users> MATCHER = MatcherFactory.usingIgnoringFieldsComparator(Users.class, "registered", "password", "votes");
+    public static final MatcherFactory.Matcher<Users> MATCHER = MatcherFactory.usingIgnoringFieldsComparator(Users.class, "registered", "password", "votes", "roles");
 
     public static final int USER_ID = START_SEQ + 1;
     public static final int ADMIN_ID = START_SEQ;
@@ -24,6 +25,25 @@ public class UsersTestData {
     public static final int ADMIN_ROLES_ID_2 = START_SEQ + 1;
 
     public static final Users user1 = new Users(USER_ID, "User1", "user1@yandex.ru", "password");
+    public static final Users user2 = new Users(USER_ID + 1, "User2", "user2@yandex.ru", "password");
+    public static final Users user3 = new Users(USER_ID + 2, "User3", "user3@yandex.ru", "password");
+    public static final Users user4 = new Users(USER_ID + 3, "User4", "user4@yandex.ru", "password");
+    public static final Users user5 = new Users(USER_ID + 4, "User5", "user5@yandex.ru", "password");
+    public static final Users user6 = new Users(USER_ID + 5, "User6", "user6@yandex.ru", "password");
+    public static final Users user7 = new Users(USER_ID + 6, "User7", "user7@yandex.ru", "password");
+    public static final Users user8 = new Users(USER_ID + 7, "User8", "user8@yandex.ru", "password");
+    public static final Users user9 = new Users(USER_ID + 8, "User9", "user9@yandex.ru", "password");
+    public static final Users user10 = new Users(USER_ID + 9, "User10", "user10@yandex.ru", "password");
+    public static final Users user11 = new Users(USER_ID + 10, "User11", "user11@yandex.ru", "password");
+    public static final Users user12 = new Users(USER_ID + 11, "User12", "user12@yandex.ru", "password");
+    public static final Users user13 = new Users(USER_ID + 12, "User13", "user13@yandex.ru", "password");
+    public static final Users user14 = new Users(USER_ID + 13, "User14", "user14@yandex.ru", "password");
+    public static final Users user15 = new Users(USER_ID + 14, "User15", "user15@yandex.ru", "password");
+    public static final Users user16 = new Users(USER_ID + 15, "User16", "user16@yandex.ru", "password");
+    public static final Users user17 = new Users(USER_ID + 16, "User17", "user17@yandex.ru", "password");
+    public static final Users user18 = new Users(USER_ID + 17, "User18", "user18@yandex.ru", "password");
+    public static final Users user19 = new Users(USER_ID + 18, "User19", "user19@yandex.ru", "password");
+    public static final Users user20 = new Users(USER_ID + 19, "User20", "user20@yandex.ru", "password");
     public static final Users admin = new Users(ADMIN_ID, "Admin", "admin@gmail.com", "admin");
     public static final Role userRole = new Role(USER_ROLE_ID, "USER");
     public static final Role adminRole = new Role(ADMIN_ROLE_ID, "ADMIN");
@@ -35,14 +55,18 @@ public class UsersTestData {
         user1.setRoles(Set.of(userRoles));
         admin.setRoles(Set.of(adminRoles1, adminRoles2));
     }
-//
-//    public static User getNew() {
-//        return new User(null, "New", "new@gmail.com", "newPass", 1555, false, new Date(), Collections.singleton(Role.USER));
-//    }
-//
-//    public static User getUpdated() {
-//        return new User(USER_ID, "UpdatedName", "user@yandex.ru", "newPass", 330, false, new Date(), List.of(Role.ADMIN));
-//    }
+
+    public static Users getNew() {
+        Users user = new Users(null, "New", "new@gmail.com", "newPass", false, new Date());
+        user.setRoles(Set.of(new Roles(null, user, userRole)));
+        return user;
+    }
+
+    public static Users getUpdated() {
+        Users user = new Users(USER_ID, "UpdatedName", "user@yandex.ru", "newPass", false, new Date());
+        user.setRoles(Set.of(userRoles));
+        return user;
+    }
 
     public static String jsonWithPassword(Users users, String password) {
         return JsonUtil.writeAdditionProps(users, "password", password);
